[build-system]
requires = ["setuptools>=70.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "metastreaming_zbejzer"
version = "0.2.2"
authors = [{ name = "zbejzer" }]
description = "Tagging music files using metadata from Deezer"
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
requires-python = ">=3.12"
dependencies = ["mutagen>=1.47.0", "validators>=0.28.3"]

[project.scripts]
metastreaming-cli = "metastreaming:main"
